Changed URL to URI in UWS Result object.
git-svn-id: https://opencadc.googlecode.com/svn/trunk@1337 728ff76a-78ac-11de-a72b-d90af8dea425